fixed stuff on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,6 +130,17 @@ section .block p{
     line-height: 18px;
 	color: #536168;
 }
+@media (max-width:600px){
+	section h2{
+		font-size: 24px;
+	}
+	section p{
+		font-size: 14px;
+	}
+	section .block p{
+		font-size: 12px;
+	}
+}
 section .block img{
 	width: 10%;
 	display: inline-block;
@@ -200,14 +211,6 @@ section.eixos .eixo-itens{
 	  	-moz-column-count: 2;
 	}
 }
-@media (max-width: 420px){
-	section.eixos .eixo-itens{
-		column-width: 100%;
-		column-count: 1;
-	  	-webkit-column-count: 1;
-	  	-moz-column-count: 1;
-	}
-}
 .eixo-itens .item{
 	display: block;
   	column-break-inside: avoid;
@@ -215,6 +218,17 @@ section.eixos .eixo-itens{
   -webkit-column-break-inside: avoid;
   	width: 100%;
   	margin: 10px;
+}
+@media (max-width: 420px){
+	section.eixos .eixo-itens{
+		column-width: 100%;
+		column-count: 1;
+	  	-webkit-column-count: 1;
+	  	-moz-column-count: 1;
+	}
+	.eixo-itens .item{
+		margin: 10px 0;
+	}
 }
 .eixo-itens .item h3{
 	background-color: #839aa6;
@@ -267,21 +281,6 @@ section.eixos .eixo-itens{
 /*.eixo--tipos:last-child{
 	max-height: 1470px;
 }*/
-@media (max-width: 980){
-	.eixo--tipos{
-		max-height: 1600px;
-	}
-}
-@media (max-width: 920){
-	.eixo--tipos{
-		max-height: 1700px;
-	}
-}
-@media (max-width: 860){
-	.eixo--tipos{
-		max-height: 1800px;
-	}
-}
 .eixo--tipo{
  	break-inside: avoid;
   	-webkit-column-break-inside: avoid;
@@ -312,16 +311,6 @@ section.eixos .eixo-itens{
 .eixo--item:first-child .eixo--tipos{
 	max-height: 1450px;
 }
-@media (max-width: 980){
-	.eixo--item:first-child .eixo--tipos{
-		max-height: 1750px;
-	}
-}
-@media (max-width: 600){
-	.eixo--item:first-child .eixo--tipos{
-		max-height: auto;
-	}
-}
 @media (max-width: 700px){
 	.eixo--tipos{
 		column-count: 1;
@@ -329,7 +318,9 @@ section.eixos .eixo-itens{
   		-moz-column-count: 1;
 	}
 	.eixo--tipo{
-		margin: 0;
+		margin: 10px 0;
+		border-radius: 0;
+		padding: 10px 20px;
 	}
 }
 .form{
